# shengine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GenerateDebug.bat  Jenkinsfile  LinuxPrerequisites.sh  README.md  VulkanSteps.html  VulkanSteps.md  appveyor.yml  buildVulkan.1.1.sh  configure.txt  export-application.py  export-simulation.py  launcher.py  linuxPrerequisites.sh  set-editor-application.py  set-editor-simulation.py  set-simulation.py
.ShCI/: linux-log.md  windows-log.md
.circleci/: config.yml
.shci/: linux-log.md  windows-log.md
.shci/linux/: build.sh  (+5 more)
Export/: scene.fgg
Scripts/: 1  fggSerialReader.bat  fggSerialReader.py
applications/serial-demo/: CMakeLists.txt
applications/serial-demo/assets/descriptors/: materials.json
applications/serial-demo/assets/meshes/: pico-black.ply
applications/serial-demo/assets/shaders/src/: Mesh.frag
applications/serial-demo/pico-bin/: shengine_sample_raw.uf2
applications/serial-demo/src/: serial-demo.c
applications/triangle/: CMakeLists.txt  ini.smd  source-files.txt
applications/triangle/assets/shaders/src/: noise.vert
applications/triangle/shaders/src/: mesh.frag  mesh.vert
applications/triangle/smd/: application.smd  host-memory.smd  pipelines.smd  scene.smd  serial.smd  vulkan-memory.smd
applications/triangle/src/: triangle.c
collection/: CMakeLists.txt  collection.cmake
collection/shapplication-host/include/shapplication-host/: shApplicationHost.h
collection/shapplication-host/src/: shApplicationHost.c
collection/shapplicationhost/include/shapplicationhost/: shApplicationHost.h
collection/shapplicationhost/src/: shApplicationHost.c
collection/shcomponents/include/shcomponents/: shCamera.h  shIdentity.h  shInputLinker.h  shTransform.h
collection/sheditor/include/sheditor/: shEditor.h
collection/sheditor/src/: shEditor.c
collection/shengine/include/shengine/: shEngine.h  shEngineUI.h  shEngineVkCore.h  shExport.h  shInput.h  shLinearAlgebra.h  shProfiling.h  shScene.h  shTime.h  shWindow.h
collection/shengine/src/: shEngine.c  shEngineUI.c  shInput.c  shLinearAlgebra.c  shProfiling.c  shScene.c  shTime.c  shWindow.c
collection/shenvironment/include/shenvironment/: shEnvironment.h  shFileUtilities.h
collection/shenvironment/src/: shEnvironment.c  shFileUtilities.c
collection/shsharedhost/include/shsharedhost/: shSharedHost.h
collection/shsharedhost/src/: shSharedHost.c
collection/shterminal/src/: shTerminal.c
docs/: Doxyfile  Doxyfile.in  custom.css  native-scripting.md  noise-example.md  project-guide.md  shengine-docs.cmake
ecs/: shIdentity.h  shImage.h  shMaterial.h  shMesh.h  shMeshInfo.h  shTransform.h
requirements/: debian-requirements.sh  (+1 more)
shengine/: CMakeLists.txt
shengine/shecs/include/shecs/: shCamera.h  shComponents.h  shEcsImplementation.h  shIdentity.h  shImage.h  shMaterial.h  shMesh.h  shPhysics.h  shTransform.h
shengine/sheditor/include/sheditor/: shEditor.h
shengine/sheditor/src/: shEditor.c
shengine/shengine/include/shegui/: shEgui.h
shengine/shengine/include/shengine/: shEngine.h  shExport.h  shInput.h  shTime.h  shWindow.h
shengine/shengine/include/shlinear-algebra/: shCglmImplementation.h  shEuler.h  shView.h
shengine/shengine/include/shscene/: shScene.h
shengine/shengine/src/shegui/: shEgui.c
shengine/shengine/src/shengine/: shEngine.c  shInput.c  shTime.c  shWindow.c
shengine/shengine/src/shlinear-algebra/: shProjection.c  shView.c
shengine/shengine/src/shmaterialhost/: shMaterialHost.c
shengine/shengine/src/shscene/: shScene.c
shengine/shfd/include/shfd/: shFd.h  shfile.h
shengine/shfd/src/: shFd.c  shFile.c  shfd.c
shengine/shsharedhost/include/shsharedhost/: shSharedHost.h
shengine/shsharedhost/src/: shSharedHost.c
simulations/: CMakeLists.txt
simulations/assets/descriptors/: materials.json  scene.json
simulations/assets/meshes/: cube.ply  diorama.ply
simulations/attractors/: source-files.txt
simulations/attractors/assets/descriptors/: materials.json  scene.json  simulation.json
simulations/attractors/assets/shaders/src/: line.frag  line.vert  primitive.frag
simulations/attractors/src/: attractors.c
simulations/clifford/: source-files.txt
simulations/clifford/assets/descriptors/: materials.json  scene.json  simulation.json
simulations/clifford/assets/shaders/src/: primitive.frag  primitive.vert
simulations/clifford/src/: clifford.c
simulations/example/: source-files.txt
simulations/example/src/: rotator.c
simulations/flappy-circle/: CMakeLists.txt  source-files.txt
simulations/flappy-circle/assets/descriptors/: materials.json  scene.json  simulation.json
simulations/flappy-circle/assets/meshes/: bird-magenta.ply  bird-orange.ply  bird-yellow.ply
simulations/flappy-circle/assets/shaders/src/: Mesh.frag  Mesh.vert
simulations/flappy-circle/src/: flappy-circle.c
simulations/lorentz/: source-files.txt
simulations/lorentz/assets/descriptors/: materials.json  simulation.json
simulations/lorentz/src/: lorentz.c
simulations/noise/: CMakeLists.txt
simulations/noise/assets/descriptors/: materials.json  simulation.json
simulations/noise/assets/shaders/src/: noise.frag  noise.vert
simulations/noise/src/: noise.c
simulations/raspberrypi-pico-demo/: source-filex.txt
simulations/raspberrypi-pico-demo/assets/descriptors/: materials.json  scene.json  simulation.json
simulations/raspberrypi-pico-demo/assets/shaders/src/: Mesh.vert
simulations/serial-demo/: CMakeLists.txt  source-files.txt
simulations/serial-demo/assets/descriptors/: materials.json  scene.json  simulation.json
simulations/serial-demo/assets/meshes/: pico-gold.ply  pico-green.ply  pico-led.ply
simulations/serial-demo/assets/shaders/src/: Mesh.vert
simulations/serial-demo/src/: serial-demo.c
simulations/simulation-sample/: CMakeLists.txt  source-files.txt
simulations/simulation-sample/assets/descriptors/: materials.json  scene.json  simulation.json
simulations/simulation-sample/assets/shaders/src/: Mesh.frag  Mesh.vert  Sphere.frag
simulations/simulation-sample/src/: rotator.c
(+299 files in other folders)
